--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,1 @@
-<a href="https://servo.org/">Home</a>
-<a href="https://servo.org/starters">Contributing</a>
-<a href="https://github.com/servo/servo">GitHub</a>
+<a href="https://github.com/anholt/linux/wiki/VC4">Bug reporting/contact</a>
