Include the summary in the individual post page.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="post-header mb2">
-  <h2 class="py2">{{ page.title }}</h2>
+  <h2 class="py2">{{ page.title }}: {{ page.summary }}</h2>
   <span class="post-meta">{{ page.date | date: "%b %-d, %Y" }}</span>
 </div>
 
